# tapi

./: Cargo.toml  README.md
crates/tapi/: Cargo.toml
crates/tapi-macro/src/: lib.rs
crates/tapi/src/: builder.rs  endpoints.rs  kind.rs  lib.rs  targets.rs  tests.rs
crates/tapi/src/targets/: fs.rs  js.rs  prelude.fs  prelude.js  ts.rs
