[package]
name = "tapi"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7.4", optional = true }
chrono = { version = "0.4.34", optional = true }
dyn-clone = "1.0.16"
futures-util = "0.3.30"
heck = "0.4.1"
indexmap = "2.2.3"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
smol_str = { version = "0.2.1", optional = true }
tapi-macro = { path = "../tapi-macro" }
toml = { version = "0.8.10", optional = true }
tsify = { version = "0.4.5", default-features = false, features = ["json"] }

[dev-dependencies]
color-eyre = "0.6.2"
insta = "1.34.0"
pretty_assertions = "1.4.0"

[features]
endpoints = ["dep:axum"]
chrono = ["dep:chrono"]
toml = ["dep:toml"]
smol_str = ["dep:smol_str"]
